# swe-swarm

./: .gitignore  Dockerfile  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_ROADMAP.md  QUICK_SUMMARY.md  RESEARCH_ROADMAP.md  sprint_backlog.md  system_design.md
research/: Enterprise_AI_Agent_Swarm_Architecture.md  research.md
src/gastown/: cli.py  demo_orchestrator.py
src/gastown/agents/: __init__.py  base_agent.py  code_writer_agent.py  content_writer_agent.py  llm_agent.py  mock_agent.py  principal_engineer.md  product_manager.md  qa.md  role_agent.py  security.md  senior_engineer.md  sre.md  tpm.md  utils.py  ux.md
src/gastown/configs/: llm_providers.yaml  loader.py  model_frontier.yaml  model_local.yaml
src/gastown/dashboard/: __init__.py  app.py
src/gastown/execution/: build_runner.py  deploy_runner.py  test_runner.py
src/gastown/llm/: __init__.py  cost_optimizer.py  provider.py
src/gastown/observability/: anomaly_detector.py  metrics_collector.py
src/gastown/orchestrator/: meta_orchestrator.py  rwl_engine.py  swarm_orchestrator.py  task_router.py
src/gastown/runtime/: agent_registry.py  message_bus.py  state_store.py
tests/: test_base_team.py  test_cost_optimizer.py  test_dashboard.py  test_integration.py  test_lemonade_provider.py  test_llm_agent.py  test_llm_provider.py  test_marketing_team.py  test_ollama_provider.py  test_openai_provider.py  test_rwl_engine.py  test_sales_team.py  test_task_router.py  test_test_runner.py  test_writers_room_team.py  test_youtube_team.py
(+10 files in other folders)
