[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gastown-swarm"
version = "0.1.0"
description = "Enterprise AI Agent Orchestration Framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Gastown Swarm Team", email = "team@gastown.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
dashboard = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]

[project.scripts]
gastown = "gastown.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gastown"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"